--- a/examples/packet.yml
+++ b/examples/packet.yml
@@ -28,7 +28,7 @@ services:
     env:
      - INSECURE=true
   - name: sshd
-    image: linuxkit/sshd:v0.8
+    image: linuxkit/sshd:666b4a1a323140aa1f332826164afba506abf597
 files:
   - path: root/.ssh/authorized_keys
     source: ~/.ssh/id_rsa.pub
