--- a/examples/sshd.yml
+++ b/examples/sshd.yml
@@ -22,7 +22,7 @@ services:
   - name: dhcpcd
     image: linuxkit/dhcpcd:v0.8
   - name: sshd
-    image: linuxkit/sshd:v0.8
+    image: linuxkit/sshd:666b4a1a323140aa1f332826164afba506abf597
 files:
   - path: root/.ssh/authorized_keys
     source: ~/.ssh/id_rsa.pub
